--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ configurations {
 
 repositories {
 	mavenCentral()
+	maven { url "https://maven.cubrid.org/" }
 }
 
 dependencies {
@@ -26,6 +27,8 @@ dependencies {
 	implementation 'org.apache.poi:poi:3.17'
 	implementation 'org.apache.poi:poi-ooxml:3.17'
 	implementation 'commons-fileupload:commons-fileupload:1.3.3'
+
+	implementation 'cubrid:cubrid-jdbc:11.1.0.0027'
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
