--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.driver-class-name=cubrid.jdbc.driver.CUBRIDDriver
+spring.datasource.url=jdbc:cubrid:172.31.201.17:33000:hadb:dba::?charSet=utf-8
+spring.datasource.username=dba
