--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 
 	implementation 'org.apache.poi:poi:3.17'
 	implementation 'org.apache.poi:poi-ooxml:3.17'
+	implementation 'org.apache.commons:commons-lang3:3.12.0'
 	implementation 'commons-fileupload:commons-fileupload:1.3.3'
 
 	implementation 'cubrid:cubrid-jdbc:11.1.0.0027'
