--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,6 @@ spring:
       platform: cubrid
       schema-locations: classpath:schema.sql
       data-locations: classpath:data-h2.sql
+
+mybatis:
+  mapper-locations: mapper/*.xml
